clusters/home/apps/metube/metube/configs/metube-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metube-ingressroute
  namespace: metube
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://metube.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Metube
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: mdi-video
    gethomepage.dev/app: metube # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Metube
    #gethomepage.dev/widget.type: "metube"
    #gethomepage.dev/widget.url: "https://metube.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`metube.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: metube
      port: 10216
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: metube-certificate-secret
